<resources>
    <string name="app_name">MemoryBuddy</string>
    <string name="title_card">Cards</string>
    <string name="title_deck">Decks</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Stats</string>
    <string name="title_settings">Settings</string>
    <string name="button_add_card">Add Card</string>
    <string name="cards_title">Your cards</string>
    <string name="cards_update">You have %1$d cards</string>
    <string name="enter_front_of_card">Enter the front sides content</string>
    <string name="enter_back_of_card">Enter the answer</string>
    <string name="enter_name_of_card">Enter a category (Vocab, Question, etc.)</string>
    <string name="enter_deck_of_card">Choose a deck</string>
    <string name="enter_tag_of_card">Enter tags that describe the card</string>
    <string name="recent_title">Recent</string>
    <string name="favorite_title">Favorite</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="decks_update">You have %d decks</string>
    <string name="decks_title">Your Decks</string>
    <string name="button_add_deck">Add Deck</string>
    <string name="enter_name_of_deck">Enter a name for this deck</string>
    <string name="settings_title">Settings</string>
    <string name="settings_title2">Settings2</string>
    <string name="settings_title1">Settings1</string>
    <string name="settings_title3">Settings3</string>
    <string name="statistic_title">Statistic</string>
    <string name="statitic_title1">Statistic 1</string>
    <string name="statistic_title2">Statistic 2</string>
    <string name="statistic_title3">Statistic 3</string>
    <string name="deck">"Deck: "</string>
    <string name="tag">Tag: #</string>
    <string name="front_side">Front-Side:</string>
    <string name="back_side">Back Side</string>
    <string name="category">Category:</string>
    <string name="deck_card">Deck:</string>
    <string name="make_editable">Make Editable</string>
    <string name="rate_the_card">Rate the card</string>
    <string name="rating">Rating:</string>
    <string name="recommended_to_review_in_days">Recommended to review in days:</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="give_rating">Give rating</string>
    <string name="text_title_recommended">Recommended</string>
    <string name="search">Search</string>
    <string name="times_reviewed">Times reviewed</string>
</resources>