<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_card_24"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_deck"
        android:icon="@drawable/ic_deck_24"
        android:title="@string/title_deck" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats_24"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

</menu>