<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_card"
        android:name="de.thnuernberg.bme.memorybuddy.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/navigation_deck"
        android:name="de.thnuernberg.bme.memorybuddy.ui.deck.DeckFragment"
        android:label="@string/title_deck"
        tools:layout="@layout/fragment_deck" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.thnuernberg.bme.memorybuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_stats"
        android:name="de.thnuernberg.bme.memorybuddy.ui.statistic.StatisticFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.thnuernberg.bme.memorybuddy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>