<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:nestedScrollingEnabled="true">

    <!-- EditText for entering the front of the card -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/front_side">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextFront"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_front_of_card"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/back_side">

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_back_of_card"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name input field -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/category">

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_card"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Deck input field -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/deck_card">

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDeck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_deck_of_card"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Deck input field -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/rating">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        android:valueFrom="1"
        android:valueTo="5"
        android:stepSize="1">

    </com.google.android.material.slider.Slider>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/recommended_to_review_in_days">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textRecommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/times_reviewed">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textReviewCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMakeEdit"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/make_editable">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>